[package]
name = "groupme-tui"
version = "0.1.0"
authors = ["oneilljp <oneilljp@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "*", features = ["json"] }
textwrap = "0.13"
colored = "2"
dirs = "3.0"
chrono = "0.4"
toml = "0.5"
notify-rust = "4"
